<resources>
    <string name="app_name">SematecTaskkk2</string>
    <string name="first_quarter">First Quarter</string>
    <string name="second_quarter">Second Quarter</string>
    <string name="june">June</string>
    <string name="january">January</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="march">March</string>
    <string name="february">February</string>
</resources>
