<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:text="@string/first_quarter"
        android:background="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/january"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/img4213"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/february"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/img4214"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/march"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/img4215"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/second_quarter"
        android:background="#ffffff"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/april"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/img4216"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/may"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/img4217"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/june"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/img4218"/>
    </LinearLayout>
</LinearLayout>